# desafio-stalse

./: README.md  pyproject.toml
api/: main.py
api/application/services/: OrderService.py
api/core/database/: database.py
api/core/seeds/: loadSeeds.py  seeds.json
api/domain/entities/: order.py
api/domain/interface/: Iorder.py
api/infrastructure/models/: OrderModel.py
api/infrastructure/repositories/: OrderRepositorie.py
api/interface/router/: OrderRouter.py
data/: etl.py
data/processed/: metrics.json
data/raw/: dataset.py
